--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2592,11 +2592,11 @@ input, select, textarea {
 		-ms-justify-content: space-between;
 		justify-content: space-between;
 		background-color: #1f1815;
-		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
-		background-position: top left,							top left;
+		background-attachment: fixed,								fixed;
+		background-image: url("images/overlay.png"), url("../../images/dancing_bw.jpeg");
+		background-position: bottom left,							bottom left;
 		background-repeat: repeat,								no-repeat;
-		background-size: auto,								150%;
+		background-size: auto,								66%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
@@ -3218,4 +3218,39 @@ input, select, textarea {
 				padding-left: 0;
 			}
 
+	}
+
+	.logo {
+		align-items: center;
+		text-align: center;
+		word-wrap: break-word;
+	}
+
+	.img {
+		width: 6em;
+		height: 6em;
+		padding: .3em;
+	}
+
+	.technologies {
+		position: relative;
+		padding-top: 2em;
+		padding-bottom: 2em;
+	}
+
+	.tech-container {
+		width: 100%;
+		padding-right: 15px;
+		padding-left: 15px;
+		margin-right: auto;
+		margin-left: auto;
+	}
+	
+
+	.logo-div {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		/* box-shadow: #757575bd 0 8px 6px -6px; */
+		/* padding: 1em; */
 	}
