--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2073,7 +2073,7 @@ input, select, textarea {
 				border-radius: 1em;
 				border: solid 3px rgba(255, 255, 255, 0.5);
 				color: #fff;
-				content: 'View';
+				content: 'UI Example';
 				display: inline-block;
 				font-size: 0.8em;
 				font-weight: 400;
@@ -2593,7 +2593,7 @@ input, select, textarea {
 		justify-content: space-between;
 		background-color: #1f1815;
 		background-attachment: fixed,								fixed;
-		background-image: url("images/overlay.png"), url("../../images/dancing_bw.jpeg");
+		background-image: url("images/overlay.png"), url("../../images/aoa_hero.png");
 		background-position: bottom left,							bottom left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								66%;
